hot fix - collapse

--- a/src/views/AdviceInformation/AdviceInformation.scss
+++ b/src/views/AdviceInformation/AdviceInformation.scss
@@ -12,6 +12,7 @@
     display: grid;
     grid-template-areas: "title" "content" "buttons";
     grid-area: container;
+    align-self: start;
 
     h4 {
       grid-area: title;
